# pdns-brew-default-config

./: .gitignore  CMakeLists.txt  NOTICE.TXT
etc/: CMakeLists.txt
etc/pdns/: CMakeLists.txt  pdns.conf
etc/pdns/bind-backend/: CMakeLists.txt  db.0  db.127  db.255  db.local  zones.conf
