# Copyright 2017, AppDynamics LLC. and its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

file(GLOB config_files "*.conf*")

# configure and stage only
foreach(config_file ${config_files})
    configure_file(${config_file} ${CMAKE_CURRENT_BINARY_DIR}/${config_file} @ONLY)
endforeach()

foreach(config_file ${config_files})
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${config_file} DESTINATION ${SYSCONFDIR}/bind-backend)
endforeach()

file(GLOB db_files "db.*")
install(FILES ${db_files} DESTINATION ${SYSCONFDIR}/bind-backend)
